--- a/css/style.css
+++ b/css/style.css
@@ -47,3 +47,27 @@ button {
     color: red;
     border-color: darkred;
 }
+
+#botao-cor-aleatoria {
+    color: white;
+    border: 2px solid black;
+    animation: rgb 5s infinite linear;
+}
+
+/* Animação RGB */
+@keyframes rgb {
+    0% {
+        background-color: red;
+    }
+    33% {
+        background-color: green;
+    }
+    66% {
+        background-color: blue;
+    }
+    100% {
+        background-color: red;
+    }
+}
+
+
